workspace-sf/force-app/main/default/objects/Log__x/Log__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$log</externalName>
    <externalRepository>id</externalRepository>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>