workspace-sf/force-app/main/default/objects/Log__x/fields/codigoerro__c.field-meta.xml
<CustomField>
    <fullName>codigoerro__c</fullName>
    <description>codigoerro</description>
    <externalDeveloperName>codigoerro</externalDeveloperName>
    <label>Código do erro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>