workspace-sf/force-app/main/default/objects/Log__x/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <externalDeveloperName>data</externalDeveloperName>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>