workspace-sf/force-app/main/default/objects/Log__x/fields/idregistro__c.field-meta.xml
<CustomField>
    <fullName>idregistro__c</fullName>
    <description>idregistro</description>
    <externalDeveloperName>idregistro</externalDeveloperName>
    <label>ID do registro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>