workspace-sf/force-app/main/default/objects/Log__x/fields/objeto__c.field-meta.xml
<CustomField>
    <fullName>objeto__c</fullName>
    <description>objeto</description>
    <externalDeveloperName>objeto</externalDeveloperName>
    <label>Objeto</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>