workspace-sf/force-app/main/default/objects/Log__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>objeto__c</columns>
    <columns>idregistro__c</columns>
    <columns>codigoerro__c</columns>
    <columns>codigointegracao__c</columns>
    <columns>descricaoerro__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>